# turboquant-h2o-streamingllm

./: AGENTS.md  CMakeLists.txt  CMakeOptimizations.patch  CUDA_ASYNC_OPTIMIZATION_STATUS.md  DEEPDIVE.md  FINAL_BENCHMARK_SUMMARY.md  GPU_BENCHMARK_RESULTS.md  GPU_BENCHMARK_SCRIPT.md  LONG_CONTEXT_BENCHMARK_RESULTS.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_STATUS.md  PHASE2_COMPLETE.md  PHASE2_SIMD_STATUS.md  README_TURBOQUANT.md  REAL_WORLD_BENCHMARK_RESULTS.md  STATUS.md  final_integration.py  fix_initialization.py  integrate_dequant.py  integrate_turboquant.py
common/: arg.cpp  common.cpp  common.h
include/: llama.h
src/: CMakeLists.txt  llama-context.cpp  llama-graph.cpp  llama-graph.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache-turboquant-patch.cpp  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory.h  llama-model.cpp
src/turboquant/: CMakeLists.txt  h2o_attention_accumulator.cpp  h2o_attention_accumulator.h  profile_turboquant.cpp  test_buffer_write.cpp  test_dequantization.cpp  test_packing.cpp  test_turboquant.cpp  test_turboquant_cuda.cu  test_turboquant_profiling.cpp  turboquant_cuda.cu  turboquant_cuda.cuh  turboquant_cuda_streams.cpp  turboquant_cuda_streams.h  turboquant_hip.cpp  turboquant_hip.h  turboquant_impl.cpp  turboquant_impl.h  turboquant_impl_fixed.cpp  turboquant_op.cpp  turboquant_op.h  turboquant_op_data.h  turboquant_simd.cpp  turboquant_simd.h
